--- a/olca-app-html/src/start_page/msg/messages_ar.properties
+++ b/olca-app-html/src/start_page/msg/messages_ar.properties
@@ -1,25 +1,25 @@
-community.becomeMember=Become a member of our LinkedIn group
-community.description=An increasing number of people are using openLCA. From universities to corporations to consultancies as well as institutions of every kind and size, from all over the world. Find out more about the openLCA network and its users <a href="http://www.openlca.org/network">here</a>.
-community.followUs=Follow us on Twitter!
-community.note=The source code of openLCA is hosted on <a href="https://github.com/GreenDelta">Github</a>.
-community.title=Community
-gettingStarted.bulletpoint1=Choose a <strong>database</strong> from <a href="https://nexus.openlca.org">openLCA Nexus</a> and import it into openLCA. You can also start with an empty database and create your own data sets.
-gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href="http://www.openlca.org/downloads">openLCA website</a> and import then into the database.
-gettingStarted.description=For first-time users: To use openLCA, you need to prepare two things:
-gettingStarted.explanatoryVideo=How to import a database and methods into openLCA is shown in this <a href="https://www.youtube.com/watch?v=FqVMbwhAEW4">video</a>.
-gettingStarted.note=Now you have everything to start your LCA study!
-gettingStarted.title=Getting started
-manuals.description=Find out more on how to work with openLCA in our <a href="http://www.openlca.org/manuals">user manuals</a>. These illustrate the most basic features and functions as well as offer comprehensive information on more advanced topics. You can also have a look to our <a href="http://www.openlca.org/case_studies">case studies</a> for inspiration on how to model your system.
-manuals.instructionalVideos=See also our <a href="https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w">instructional videos</a> that explain and demonstrate specific subjects.
-manuals.title=Manuals & Case studies
-subtext.first=Professional and powerful Life Cycle Assessments (LCA) and sustainability assessment software.
-subtext.second=Open Source: Licenced under the Mozilla Public Licence 2.0.
-subtext.third=Created and maintained since 2006 by GreenDelta, Berlin
-subtitle=Version 1.5.0 (Windows 64bit)
-title=Welcome to openLCA!
-whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong>
-whatsNew.bulletpoint2=New and better <strong>structure of database elements</strong> including new icons
-whatsNew.bulletpoint3=Several <strong>smaller improvements and bug fixes</strong>
-whatsNew.description=For the 1.5 version, we restructured the software and implemented new features to make openLCA more user-friendly and even more powerful:
-whatsNew.findOutMore=Find out in more detail what is new in version 1.5 <a href="http://www.openlca.org/news#New_1_5_0">here</a>.
-whatsNew.title=What's new?
+community.becomeMember=اصبح عضوا  في مجموعتنا لينكدين
+community.description=            OpenLCAعدد متزايد من   الناس يستخدمون      مثل المؤسسات الجامعية ومكاتب الاستشارات والعديد من المؤسسات من كل نوع وحجم من جميع أنحاء العالم. هنا ستتعرف  ن المزيد عن شبكة ومستخدميها. href="http://www.openlca.org/network
+community.followUs=!تابعنا على تويتر
+community.note= openLCA تمت استضافة مصدرالرمز المتعلق
+community.title=الجالية
+gettingStarted.bulletpoint1=                            .openLCA واستيراده إلى openLCA Nexusاختيار قاعدةالبيانات                                              يمكنك أيضا بدء تشغيل مع قاعدة بيانات فارغة وإنشاء مجموعات البيانات الخاصة بك 
+gettingStarted.bulletpoint2= واستيرادها إلى قاعدة البيانات openLCA  تحميل طرق التأثير من موقع 
+gettingStarted.description= تحتاج إلى إعداد أمرين openLCA للمستخدمين لأول مرة:لاستخدام، :
+gettingStarted.explanatoryVideo=   في هذا الفيديو  openLCA تم توضيح كيفية استيراد قاعدة بيانات و الطرق في   
+gettingStarted.note=الآن لديك كل المعطيات لبدء الدراسة  الخاصة بك!
+gettingStarted.title=الشروع
+manuals.description= openLCAاستعمل دليل المستخدم لمعرفة المزيد حول كيفية العمل ب  الذي يقدم الخصائص والوظائف الأساسية فضلا عن تقديم معلومات شاملة عن مواضيع أكثر تقدما. يمكنك أيضا إلقاء نظرة على دراسات الحالة للتعرف على كيفية تصميم نموذج النظام الخاص بك
+manuals.instructionalVideos=انظر أيضا إلى أشرطة الفيديو التعليمية التي تفسر و تبين العديد من المواضيع
+manuals.title=دليل الاستخدام ودراسات الحالات
+subtext.first=برنامج محترف وقوي لتقييم الدورة الحياتية و الاستدامة
+subtext.second=مفتوحة المصدر: مرخص تحت رخصة موزيلا العمومية 2.0.
+subtext.third=      برلين GreenDelta تم انشاؤه وصيانته منذ عام 2006 من قبل
+subtitle= (Windows 64bit)النسخة 1.5.0
+title=openLCA   مرحبا بكم في
+whatsNew.bulletpoint1=تقييم الأثر الإقليمي وتحسين كلفة دورة الحياة
+whatsNew.bulletpoint2=هيكل جديد وأحسن لعناصر قاعدة البيانات بما في ذلك أيقونات جديدة
+whatsNew.bulletpoint3=العديد من التحسينات الصغيرة وإصلاح الأخطاء
+whatsNew.description=، openLCA بالنسبة للنسخة 1.5 تمت إعادة هيكلة البرامج واحداث خصائص جديدة لجعل   أكثر قوة و صديق للمستخدم
+whatsNew.findOutMore=إيجاد مزيد من التفصيل حول ما هو جديد في النسخة 1.5 هنا
+whatsNew.title=ما هو الجديد؟
