--- a/olca-app-html/src/start_page/msg/messages_bg.properties
+++ b/olca-app-html/src/start_page/msg/messages_bg.properties
@@ -1,4 +1,6 @@
+community.becomeMember=Станете член на нашата LinkedIn група
 community.description=Нарастващ брой потребители използват openLCA. От Университети, корпорации, консултантски фирми и институции от всякакъв вид и и обхват, от целия свят.Научете повече за мрежата на openLCA и нейните потребители  <a href="http://www.openlca.org/network">тук</a>.
+community.followUs=Последвайтен ни в Twitter!
 community.note=Програмният код на openLCA се намира на уеб адрес <a href="https://github.com/GreenDelta">Github</a>.
 community.title=Общност
 gettingStarted.bulletpoint1=Изберете <strong>база данни</strong> от <a href="https://nexus.openlca.org">openLCA Nexus</a> и импортирайте базата данни в openLCA .Можете също да започнете с една празна база данни и да създадете ваши собствени комплекти от данни в нея. Така, новата база данни ще съответства по-добре на вашите специфични потребности.
@@ -15,7 +17,7 @@ subtext.second=Отворен код: Лицензиран с Mozilla Public Li
 subtext.third=Създаден и подържан от 2006 година от GreenDelta, Berlin.
 subtitle=Версия 1.5.0 (Windows 64bit)
 title=Добре дошли в openLCA!
-whatsNew.bulletpoint1=<strong>Съобразена с региона оценка на въздействията върху околната среда</strong>
+whatsNew.bulletpoint1=<strong>Съобразена с региона оценка на въздействията върху околната среда</strong> и подбрено <strong>Остойностяване на разходите в Жизнения Цикъл (LCC))</strong>
 whatsNew.bulletpoint2=Нова и по-добра <strong>структура на елементите на базата данни</strong>, включително нови икони
 whatsNew.bulletpoint3=Няколко <strong>малки подобрения и отстранени бъгове</strong>
 whatsNew.description=За версията 1.5 ние преструктурирахме софтуера и вградихме нови свойства, за да направим продукта openLCA в по-голяма степен лесен за употреба и дори по-мощен.
