--- a/olca-app-html/src/start_page/msg/messages_ca.properties
+++ b/olca-app-html/src/start_page/msg/messages_ca.properties
@@ -1,4 +1,6 @@
+community.becomeMember=Uneix-te al nostre grup de LinkedIn
 community.description=Cada cop més persones utilitzen openLCA. Des d'universitats fins a corporacions i consultories, així com institucions de tots tipus i mides, arreu del món. Descobreix més sobre la xarxa openLCA i els seus usuaris <a href="http://www.openlca.org/network">aquí</a>.
+community.followUs=Segueix-nos a Twitter!
 community.note=El codi font d'openLCA està penjat a <a href="https://github.com/GreenDelta">Github</a>.
 community.title=Comunitat
 gettingStarted.bulletpoint1=Tria una <strong>base de dades</strong> d'<a href="https://nexus.openlca.org">openLCA Nexus</a> i importa-la a openLCA. També pots començar una base de dades buida i crear els teus propis conjunts de dades.
