--- a/olca-app-html/src/start_page/msg/messages_de.properties
+++ b/olca-app-html/src/start_page/msg/messages_de.properties
@@ -1,4 +1,6 @@
+community.becomeMember=Werden Sie Teil unserer LinkedIn-Gruppe
 community.description=Immer mehr Menschen benutzen openLCA. Von Universitäten zu Unternehmen zu Beratungsfirmen, aber auch Institutionen jeder Art und Größe, überall auf der Welt. <a href="http://www.openlca.org/network">Erfahren Sie mehr</a> über das openLCA-Netzwerk.
+community.followUs=Folgen Sie uns auf Twitter!
 community.note=Der Quelltext von openLCA wird auf <a href="https://github.com/GreenDelta">Github</a> bereitgestellt. 
 community.title=Community
 gettingStarted.bulletpoint1=Wählen Sie eine <strong>Datenbank</strong> von der <a href="https://nexus.openlca.org">openLCA Nexus Webseite</a> und importieren Sie sie in openLCA. Sie können auch mit einer leeren Datenbank anfangen und Ihre eigenen Datensätze erzeugen.
@@ -15,7 +17,7 @@ subtext.second=Open Source: Lizensiert unter der Mozilla Public Licence 2.0.
 subtext.third=Erstellt und weiterentwickelt von GreenDelta, Berlin
 subtitle=Version 1.5.0 (Windows 64bit)
 title=Willkommen zu openLCA!
-whatsNew.bulletpoint1=<strong>Regionalisierte Wirkungsabschätzung</strong>
+whatsNew.bulletpoint1=<strong>Regionalisierte Wirkungsabschätzung</strong> & verbesserte Lebenszykluskostenrechnung
 whatsNew.bulletpoint2=Neue und bessere <strong>Struktur der Datenbankelemente</strong> und neue Icons
 whatsNew.bulletpoint3=Mehrere <strong>kleinere Verbesserungen und Fehlerbehebungen</strong>
 whatsNew.description=Für Version 1.5 haben wir die Software restrukturiert und neue Funktionalitäten eingebaut um openLCA benutzerfreundlicher und noch leistungsfähiger zu machen:
