--- a/olca-app-html/src/start_page/msg/messages_it.properties
+++ b/olca-app-html/src/start_page/msg/messages_it.properties
@@ -1,4 +1,6 @@
+community.becomeMember=Diventa un membro del nostro gruppo LinkedIn
 community.description=Un crescente numero di persone sta utilizzando openLCA. Dalle università alle aziende, alle società di consulenza, alle istituzioni di qualunque tipo e dimensione, di tutto il mondo. Scopri di più sulla rete di openLCA e sui suoi utenti <a href="http://www.openlca.org/network">here</a>.
+community.followUs=Seguici su Twitter!
 community.note=Il codice sorgente di openLCA è disponibile su <a href="https://github.com/GreenDelta">Github</a>.
 community.title=Community
 gettingStarted.bulletpoint1=Scegli un <strong>database</strong> da <a href="https://nexus.openlca.org">openLCA Nexus</a> e importalo in openLCA. Oppure inizia con database vuoto e crea il tuo set di dati.
@@ -15,7 +17,7 @@ subtext.second=Open Source: Licenziato tramite la Mozilla Public Licence 2.0.
 subtext.third=Creato e aggiornato dal 2006 da GreenDelta, Berlino
 subtitle=Versione 1.5.0 (Windows 64bit)
 title=Benvenuto in openLCA!
-whatsNew.bulletpoint1=<strong>Valutazione regionalizzata degli impatti</strong>
+whatsNew.bulletpoint1=<strong>Valutazione regionalizzata degli impatti</strong> & <strong>Analisi di ciclo di vita dei costi (LCC)</strong> migliorata
 whatsNew.bulletpoint2=Nuova e migliorata <strong>struttura degli elementi del database</strong>, incluse nuove icone
 whatsNew.bulletpoint3=Molte <strong>correzioni di errori e piccole migliorie</strong>
 whatsNew.description=Per la versione 1.5 abbiamo ristrutturato il software e implementato nuove funzionalità per rendere openLCA più utilizzabile dall'utente e anche più perfomante:
