--- a/olca-app-html/src/start_page/msg/messages_pt.properties
+++ b/olca-app-html/src/start_page/msg/messages_pt.properties
@@ -1,4 +1,6 @@
+community.becomeMember=Torne-se um membro do nosso grupo LinkedIn
 community.description=Um número crescente de pessoas estão usando o openLCA. Universidades, empresas de consultorias, assim como instituições de todos os tipos em todo o mundo. Saiba mais sobre a rede openLCA e seus usuários <a href="http://www.openlca.org/network"> aqui </a>.
+community.followUs=Siga-nos no Twitter!
 community.note=O código-fonte do openLCA está hospedado em <a href="https://github.com/GreenDelta"> Github </a>.
 community.title=Comunidade
 gettingStarted.bulletpoint1=Escolha um <strong> banco de dados </ strong> <a href="https://nexus.openlca.org"> openLCA Nexus </a> e importe para  o openLCA. Você também pode começar com um banco de dados vazio e criar seus próprios datasets.
@@ -15,7 +17,7 @@ subtext.second=Software de código aberto licenciado pela Mozilla Public Licence
 subtext.third=Criado e mantido desde 2006 pela GreenDelta em Berlim, Alemanha.
 subtitle=Versão 1.5.0 (Windows 64bit)
 title=Bem vindos ao openLCA!
-whatsNew.bulletpoint1=<Strong> Avaliação de impacto regionalizada </ strong>
+whatsNew.bulletpoint1=<strong>Avaliação de impactos regionalizados</strong> & <strong>Custos do ciclo de vida</strong> aprimorados
 whatsNew.bulletpoint2=Uma atual e melhor estrutura dos elementos da base de dados incluindo novos ícones.
 whatsNew.bulletpoint3=Diversas <strong>melhorias e correções de bugs</strong>
 whatsNew.description=Para a versão 1.5, foram implementados novos recursos para tornar o openLCA um software amigável e muito mais robusto:
