--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -23,6 +23,7 @@ Amount=Quantitat
 Analysis=An\u00e0lisi
 AnalysisResultOf=An\u00e0lisi de resultat de
 AnalyzingForProblems=Analitzant per problemes
+ApplyFormatToInputsOutputs=Aplicar el format a les entrades/sortides de l'editor de proc\u00e9s
 AsDefinedInProcesses=Segons es defineix en els processos
 AssignUnits=Assignar unitats
 Author=Autor/a
@@ -99,6 +100,7 @@ Content=Contingut
 Context=Context
 Contribution=Contribuci\u00f3
 ContributionTree=Arbre de contribucions
+ContributionTreeLocations=Arbre de contribucions per ubicaci\u00f3
 ConversionFactor=Factor de conversi\u00f3
 Copy=Copiar
 CopyAllFromRightToLeft=Copiar tot de la dreta a l'esquerra
@@ -196,7 +198,12 @@ DependentParameters=Par\u00e0metre depenents
 Description=Descripci\u00f3
 DeveloperTools=Eines de programaci\u00f3
 Diff=Fitxer de difer\u00e8ncies
+Direct=Directes
 DirectContribution=Contribuci\u00f3 directa
+DirectContributionsFlowResults=Contribucions directes als resultats de flux
+DirectContributionsFlowResultsOverview=Contribuciones directes als resultats de fulx - resum
+DirectContributionsImpactCategoryResults=Contribuciones directes als resultats de categories d'impacte
+DirectContributionsImpactCategoryResultsOverview=Contribuciones directes als resultats de categories d'impacte
 DirectImpact=Impacte directe
 Direction=Direcci\u00f3
 DisconnectFromRepository=Desconnectar del repositori
@@ -268,6 +275,7 @@ FixedCosts=Costos fixos
 Flow=Flux
 FlowCategory=Categoria de flux
 FlowContributions=Contribucions de flux
+FlowContributionsToProcessResults=Contribucions de flux als resultats de proc\u00e9s
 FlowProperties=Propietats de flux
 FlowProperty=Propietat de flux
 FlowPropertyIsUsed=La propietat de flux seleccionada s'utilitza en processos o m\u00e8todes d'avaluaci\u00f3 d'impacte
@@ -444,8 +452,8 @@ NameCannotBeEmpty=El nom no pot estar buit
 NameEmptyOrAlreadyExists=El nom est\u00e0 buit o ja existeix
 NameShouldBeDifferent=El nom ha de ser diferent
 NeedOpenDatabase=Primer cal obrir una base de dades
-Netcosts=Costos nets
 NetCosts=Costos nets
+Netcosts=Costos nets
 Never=Mai
 NewActor=Nou actor
 NewCategory=Nova categoria
@@ -577,6 +585,7 @@ QuantitativeReference=Refer\u00e8ncia quantitativa
 Quantity=Magnitud
 QuickResults=Resultats r\u00e0pids
 RawValue=Valor de refer\u00e8ncia
+ReallyDeleteShapeFile=Vol realment eliminar el shapefile creat? Tots els canvis es guardaran autom\u00e0ticament.
 RecalculateQuestion=Es recalcularan els valors. Vols continuar?
 RecalculateQuestionText=Vols recalcular el valor per defecte i la incertesa amb la font de dades seleccionada?
 RecalculateQuestionTitle=Recalcular
@@ -749,6 +758,7 @@ UpdateMinorVersion=Actualitzar versi\u00f3 menor
 UpdatePreferences=Actualitzar prefer\u00e8ncies
 UpdateReferenceCurrency=Actualitzar divisa de refer\u00e8ncia...
 UpdatingProductSystem=Actualitzant sistema de producte
+UpstreamInclDirect=Total incl. processos previs
 UpstreamTotal=Total processos previs
 UpToDate=Actualitzat - No hi ha canvis recuperats
 URL=URL
