--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -23,6 +23,7 @@ Amount=Menge
 Analysis=Analyse
 AnalysisResultOf=Analysenergebnis von
 AnalyzingForProblems=Analysiere m\u00f6gliche Probleme
+ApplyFormatToInputsOutputs=Format auch im Prozesseditor f\u00fcr Inputs/Outputs anwenden
 AsDefinedInProcesses=Aus Prozessen \u00fcbernehmen
 AssignUnits=Einheiten zuordnen
 Author=Autor
@@ -99,6 +100,7 @@ Content=Inhalt
 Context=Kontext
 Contribution=Beitrag
 ContributionTree=Beitragsbaum
+ContributionTreeLocations=Beitragsbaum f\u00fcr Orte
 ConversionFactor=Umrechnungsfaktor
 Copy=Kopieren
 CopyAllFromRightToLeft=Alle von rechts nach links kopieren
@@ -196,7 +198,12 @@ DependentParameters=Abh\u00e4ngige Parameter
 Description=Beschreibung
 DeveloperTools=Entwicklerwerkzeuge
 Diff=Diff
+Direct=Direkt
 DirectContribution=Direkter Beitrag
+DirectContributionsFlowResults=Direkte Beitr\u00e4ge zu Flussergebnissen
+DirectContributionsFlowResultsOverview=Direkte Beitr\u00e4ge zu Flussergebnissen - \u00dcberblick
+DirectContributionsImpactCategoryResults=Direkte Beitr\u00e4ge zu Wirkungskategorieergebnissen
+DirectContributionsImpactCategoryResultsOverview=Direkte Beitr\u00e4ge zu Wirkungskategorieergebnissen - \u00dcberblick
 DirectImpact=Direkte Wirkung
 Direction=Richtung
 DisconnectFromRepository=Verbindung zum Datenspeicher trennen
@@ -218,7 +225,7 @@ EndDate=Enddatum
 English=Englisch
 EnterLocationNameAndCode=Bitte geben Sie einen Name und Code f\u00fcr den neuen Ort ein.
 Error=Fehler
-ErrorPopupMessage=Bitte sehen Sie die Log-Datei ein, um weitere Informationen zu erhalten
+ErrorPopupMessage=Bitte sehen Sie die Logdatei ein, um weitere Informationen zu erhalten
 ErrorPopupTitle=Ein unerwarteter Fehler ist aufgetreten
 EvaluateLocations=F\u00fcr bestehende Orte auswerten
 EvaluatingLocations=Orte werden ausgewertet
@@ -268,6 +275,7 @@ FixedCosts=Fixkosten
 Flow=Fluss
 FlowCategory=Flusskategorie
 FlowContributions=Flussbeitr\u00e4ge
+FlowContributionsToProcessResults=Flussbeitr\u00e4ge zu Prozessergebnissen
 FlowProperties=Flusseigenschaften
 FlowProperty=Flusseigenschaft
 FlowPropertyIsUsed=Dieser Flussname wird in Prozessen oder Wirkungsabsch\u00e4tzungsmethoden verwendet.
@@ -396,7 +404,7 @@ LocalDatabase=Lokale Datenbank
 LocalModel=Lokales Modell
 Location=Ort
 Locations=Orte
-LogFile=Log-Datei
+LogFile=Logdatei
 LogNormalDistribution=Logarithmische Normalverteilung
 Longitude=L\u00e4ngengrad
 LowOpportunity=Niedrige Wahrscheinlichkeit
@@ -513,7 +521,7 @@ OpenEditor=Editor \u00f6ffnen
 OpenInEditor=In Editor \u00f6ffnen
 OpenLCALog=openLCA Log
 OpenLCAUpdateCheck=Suche nach Updates f\u00fcr openLCA
-OpenLogFile=\u00d6ffne Log-Datei
+OpenLogFile=\u00d6ffne Logdatei
 OpenMiniatureView=\u00d6ffne Miniaturansicht
 OpenPluginManager=\u00d6ffnet den openLCA Plugin Manager
 Other=Rest
@@ -577,6 +585,7 @@ QuantitativeReference=Quantitative Referenz
 Quantity=Gr\u00f6\u00dfe
 QuickResults=Schnelle Ergebnisse
 RawValue=Urspr\u00fcnglicher Wert
+ReallyDeleteShapeFile=M\u00f6chten Sie wirklich das ausgew\u00e4hlte Shapefile l\u00f6schen? Alle \u00c4nderungen werden automatisch gespeichert.
 RecalculateQuestion=Werte werden neuberechnet. M\u00f6chten Sie fortfahren?
 RecalculateQuestionText=M\u00f6chten Sie, dass der voreingestellte Wert und die Unsicherheit mit der ausgew\u00e4hlten Datenquelle neuberechnet werden?
 RecalculateQuestionTitle=Neuberechnen
@@ -749,6 +758,7 @@ UpdateMinorVersion=Update Unterversion
 UpdatePreferences=Einstellungen f\u00fcr das Update
 UpdateReferenceCurrency=Referenzw\u00e4hrung aktualisieren
 UpdatingProductSystem=Aktualisiere Produktsystem 
+UpstreamInclDirect=Vorkette inkl. Direkt
 UpstreamTotal=Gesamte Vorkette
 UpToDate=Auf neuestem Stand - Keine \u00c4nderungen zum Abrufen vorhanden
 URL=URL
