--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -23,6 +23,7 @@ Amount=Quantit\u00e9
 Analysis=Analyse
 AnalysisResultOf=R\u00e9sultat de l'analyse de
 AnalyzingForProblems=Analyse des probl\u00e8mes
+ApplyFormatToInputsOutputs=Appliquer le format des entr\u00e9es / sorties dans l'\u00e9diteur de processus
 AsDefinedInProcesses=Tel que d\u00e9fini dans les proc\u00e9d\u00e9s
 AssignUnits=Affecter les unit\u00e9s
 Author=Auteur
@@ -99,6 +100,7 @@ Content=Contenu
 Context=Contexte
 Contribution=Contribution
 ContributionTree=Arbre de contribution
+ContributionTreeLocations=Emplacement des arbres de contribution
 ConversionFactor=Facteur de conversion
 Copy=Copier
 CopyAllFromRightToLeft=tout copier de droite \u00e0 gauche
@@ -190,12 +192,18 @@ DeleteRepository=Supprimer le d\u00e9p\u00f4t
 DeleteSection=Effacer la section
 DeleteShapeFile=Supprimer le fichier de forme
 DeletingRepository=suppression du d\u00e9p\u00f4t
+DependenantParameter=param\u00e8tre d\u00e9pendant
 DependentParameter=Param\u00e8tre li\u00e9
 DependentParameters=Param\u00e8tres li\u00e9s
 Description=Description
 DeveloperTools=Outils d\u00e9veloppeurs
 Diff=Diff
+Direct=direct
 DirectContribution=Contribution directe
+DirectContributionsFlowResults=Contribution directe des r\u00e9sultats de flux
+DirectContributionsFlowResultsOverview=Contribution directe des r\u00e9sultats de flux - aper\u00e7u
+DirectContributionsImpactCategoryResults=Contribution directe \u00e0 l'impact des r\u00e9sultats par cat\u00e9gorie
+DirectContributionsImpactCategoryResultsOverview=Contribution directe \u00e0 l'impact des r\u00e9sultats par cat\u00e9gorie - aper\u00e7u
 DirectImpact=Impact direct
 Direction=Direction
 DisconnectFromRepository=D\u00e9connexion du d\u00e9p\u00f4t
@@ -267,6 +275,7 @@ FixedCosts=Co\u00fbts fixes
 Flow=Flux
 FlowCategory=Cat\u00e9gorie de flux
 FlowContributions=Contributions des flux 
+FlowContributionsToProcessResults=Contributions des flux aux r\u00e9sultats des proc\u00e9d\u00e9s
 FlowProperties=Propri\u00e9t\u00e9s de flux
 FlowProperty=Propri\u00e9t\u00e9 du flux
 FlowPropertyIsUsed=La propri\u00e9t\u00e9 de flux donn\u00e9e est utilis\u00e9e dans les processus ou m\u00e9thodes d'impact
@@ -443,8 +452,8 @@ NameCannotBeEmpty=Le nom ne peut pas \u00eatre vide
 NameEmptyOrAlreadyExists=Le nom est vide ou n'existe pas
 NameShouldBeDifferent=Le nom doit \u00eatre diff\u00e9rent
 NeedOpenDatabase=Vous devez commencer par ouvrir une base de donn\u00e9es
-Netcosts=Co\u00fbts nets
 NetCosts=Co\u00fbts nets
+Netcosts=Co\u00fbts nets
 Never=Jamais
 NewActor=Nouvel acteur
 NewCategory=nouvelle cat\u00e9gorie
@@ -576,6 +585,7 @@ QuantitativeReference=R\u00e9f\u00e9rence quantitative
 Quantity=quantit\u00e9
 QuickResults=R\u00e9sultats rapides
 RawValue=Valeur brute
+ReallyDeleteShapeFile=Voulez vous vraiment supprimer le "shapefile" s\u00e9lectionn\u00e9 ? Tous changements seront automatiquement sauvegard\u00e9s.
 RecalculateQuestion=Les valeurs seront recalcul\u00e9es, souhaitez-vous poursuivre?
 RecalculateQuestionText=Souhaitez-vous recalculer la valeur par d\u00e9faut et l'incertitude avec la source de donn\u00e9es s\u00e9lectionn\u00e9e?
 RecalculateQuestionTitle=Recalculer
@@ -748,6 +758,7 @@ UpdateMinorVersion=Mettre \u00e0 jour (version mineure)
 UpdatePreferences=Pr\u00e9f\u00e9rences de mise \u00e0 jour
 UpdateReferenceCurrency=Mettre \u00e0 jour la monnaie de r\u00e9f\u00e9rence
 UpdatingProductSystem=Mise \u00e0 jour du syst\u00e8me de produit
+UpstreamInclDirect=Inclusion directe (amont)
 UpstreamTotal=Total (amont)
 UpToDate=A jour - Aucun changement r\u00e9cup\u00e9r\u00e9
 URL=URL
@@ -765,6 +776,7 @@ Variants=Variantes
 Version=Version
 VersionNewer=Version plus r\u00e9cente
 VeryHighRisk=Risque tr\u00e8s fort
+VeryLowRisk=Risque tr\u00e8s faible
 Warning=Avertissement
 Waste=D\u00e9chet
 Website=Site Internet
