--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -23,6 +23,7 @@ Amount=Quantit\u00e0
 Analysis=Analisi dettagliata
 AnalysisResultOf=Risultati dell'analisi di
 AnalyzingForProblems=Analisi dei problemi in corso
+ApplyFormatToInputsOutputs=Applica il formato agli input/output dell'editor del processo
 AsDefinedInProcesses=Come definito nei processi
 AssignUnits=Assegna unit\u00e0
 Author=Autore
@@ -99,6 +100,7 @@ Content=Contenuto
 Context=Contesto
 Contribution=Contributo
 ContributionTree=Albero dei contributi
+ContributionTreeLocations=Albero dei contributi per ubicazione
 ConversionFactor=Fattore di conversione
 Copy=Copia
 CopyAllFromRightToLeft=Copia tutto da destra a sinistra
@@ -196,7 +198,12 @@ DependentParameters=Parametri dipendenti
 Description=Descrizione
 DeveloperTools=Strumenti per sviluppatori
 Diff=Differenze
+Direct=Diretto
 DirectContribution=Contributo diretto
+DirectContributionsFlowResults=Contributi diretti ai risultati del flusso
+DirectContributionsFlowResultsOverview=Contributi diretti ai risultati del flusso - Riepilogo
+DirectContributionsImpactCategoryResults=Contributi diretti ai risultati della categoria di impatto
+DirectContributionsImpactCategoryResultsOverview=Contributi diretti ai risultati della categoria di impatto - Riepilogo
 DirectImpact=Impatto diretto
 Direction=Direzione
 DisconnectFromRepository=Disconnetti dalla repository
@@ -268,6 +275,7 @@ FixedCosts=Costi fissi
 Flow=Flusso
 FlowCategory=Categoria di flusso
 FlowContributions=Contributi del flusso
+FlowContributionsToProcessResults=Contributi del flusso ai risultati del processo
 FlowProperties=Propriet\u00e0 dei flussi
 FlowProperty=Propriet\u00e0 del flusso
 FlowPropertyIsUsed=La propriet\u00e0 del flusso selezionata \u00e8 utilizzata in un processo o in un metodo di valutazione degli impatti
@@ -444,8 +452,8 @@ NameCannotBeEmpty=Il nome non pu\u00f2 essere vuoto
 NameEmptyOrAlreadyExists=Il nome \u00e8 vuoto o esiste gi\u00e0
 NameShouldBeDifferent=Il nome sembra essere differente
 NeedOpenDatabase=Devi prima aprire un database
-Netcosts=Costi netti
 NetCosts=Costi netti
+Netcosts=Costi netti
 Never=Mai
 NewActor=Nuovo autore
 NewCategory=Nuova categoria
@@ -577,6 +585,7 @@ QuantitativeReference=Riferimento quantitativo
 Quantity=Quantit\u00e0
 QuickResults=Calcolo rapido
 RawValue=Valore di riferimento
+ReallyDeleteShapeFile=Si vuole veramente eliminare lo shapefile selezionato? Tutte le modifiche verranno salvate automaticamente
 RecalculateQuestion=Si stanno per ricalcolare i valori. Si conferma di voler continuare?
 RecalculateQuestionText=Si vuole che i dati di default e l'incertezza vengano ricalcolati con la fonte dei dati selezionata?
 RecalculateQuestionTitle=Ricalcola
@@ -749,6 +758,7 @@ UpdateMinorVersion=Aggiornamento a versione minore
 UpdatePreferences=Aggiorna le preferenze
 UpdateReferenceCurrency=Aggiorno la valuta di riferimento...
 UpdatingProductSystem=Aggiornamento sistema prodotto in corso
+UpstreamInclDirect=Upstream incl. diretto
 UpstreamTotal=Totale upstream
 UpToDate=Aggiornato - Nessuna modifica apportata
 URL=URL
