--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -23,6 +23,7 @@ Amount=Quantidade
 Analysis=An\u00e1lises
 AnalysisResultOf=An\u00e1lise dos resultados
 AnalyzingForProblems=Analisando problemas
+ApplyFormatToInputsOutputs=Aplicar formato em entradas / sa\u00eddas no editor do processo
 AsDefinedInProcesses=Conforme definido no processo
 AssignUnits=Atribuir unidades
 Author=Autor
@@ -99,6 +100,7 @@ Content=Conte\u00fado
 Context=Contexto
 Contribution=Contribui\u00e7\u00e3o
 ContributionTree=\u00c1rvore de contribui\u00e7\u00e3o
+ContributionTreeLocations=\u00c1rvore de Contribui\u00e7\u00e3o para localiza\u00e7\u00f5es
 ConversionFactor=Fator de convers\u00e3o
 Copy=C\u00f3pia
 CopyAllFromRightToLeft=Copiar tudo da direita para esquerda
@@ -196,7 +198,12 @@ DependentParameters=Par\u00e2metros dependentes
 Description=Descri\u00e7\u00e3o
 DeveloperTools=Ferramentas de desenvolvimento
 Diff=Diferen\u00e7a
+Direct=Direto
 DirectContribution=Contribui\u00e7\u00e3o direta
+DirectContributionsFlowResults=Contribui\u00e7\u00f5es direta para resultados de fluxo
+DirectContributionsFlowResultsOverview=Contribui\u00e7\u00f5es diretas para os resultados de fluxo - vis\u00e3o geral
+DirectContributionsImpactCategoryResults=Contribui\u00e7\u00f5es diretas para resultados de categoria de impacto
+DirectContributionsImpactCategoryResultsOverview=Contribui\u00e7\u00f5es diretas\u00a0para resultados de categoria\u00a0de impacto - vis\u00e3o geral
 DirectImpact=Impacto direto
 Direction=Direcionamento
 DisconnectFromRepository=Desconectar do reposit\u00f3rio
@@ -268,6 +275,7 @@ FixedCosts=Custos fixos
 Flow=Fluxo
 FlowCategory=Categoria de fluxo
 FlowContributions=Contribui\u00e7\u00e3o de fluxo
+FlowContributionsToProcessResults=Contribui\u00e7\u00f5es de fluxo para resultados dos processos
 FlowProperties=Propriedades de fluxo
 FlowProperty=Propriedade de fluxo
 FlowPropertyIsUsed=A propriedade de fluxo \u00e9 usada em processos ou m\u00e9todos de impacto.
@@ -444,8 +452,8 @@ NameCannotBeEmpty=O nome n\u00e3o pode estar vazio
 NameEmptyOrAlreadyExists=O nome est\u00e1 vazio ou j\u00e1 existe
 NameShouldBeDifferent=O nome deve ser diferente
 NeedOpenDatabase=Voc\u00ea precisa abrir a base de dados
-Netcosts=Custo liquido
 NetCosts=Custo liquido
+Netcosts=Custo liquido
 Never=Nunca
 NewActor=Novo ator
 NewCategory=Nova categoria
@@ -577,6 +585,7 @@ QuantitativeReference=Refer\u00eancia quantitativa
 Quantity=Quantidade
 QuickResults=Resultados r\u00e1pidos
 RawValue=Valor bruto
+ReallyDeleteShapeFile=Voc\u00ea realmente quer apagar o arquivo selecionado? Todas as altera\u00e7\u00f5es ser\u00e3o salvas automaticamente.
 RecalculateQuestion=Os valores ser\u00e3o recalculados, voc\u00ea deseja prosseguir?
 RecalculateQuestionText=Voc\u00ea quer que o valor padr\u00e3o e a incerteza sejam calculados com a fonte de dados selecionada?
 RecalculateQuestionTitle=Recalcular
@@ -749,6 +758,7 @@ UpdateMinorVersion=Atualize a vers\u00e3o secund\u00e1ria
 UpdatePreferences=Prefer\u00eancias de atualiza\u00e7\u00e3o
 UpdateReferenceCurrency=atualizar moeda de refer\u00eancia ...
 UpdatingProductSystem=Sistema de atualiza\u00e7\u00e3o do produto
+UpstreamInclDirect=A montante incluindo direto
 UpstreamTotal=Total da montante
 UpToDate=Atualizado - nenhuma altera\u00e7\u00e3o encontrada
 URL=URL
