--- a/olca-app-html/src/start_page/msg/messages_zh.properties
+++ b/olca-app-html/src/start_page/msg/messages_zh.properties
@@ -1,18 +1,19 @@
+community.becomeMember=成為LinkedIn群組的一員
 community.description=從大專院校,公司企業到顧問群及各種規模的機構,乃至全世界,使用openLCA的人越來越多.瞭解更多關於openLCA和它的使用者<a href="http://www.openlca.org/network">按這裡</a>.
+community.followUs=關注我們的Twitter
 community.note=openLCA的原始碼託管於<a href="https://github.com/GreenDelta">Github</a>
-community.socialMedia=從Twitter上關注我們或是成為我們在Linkedln群組中的成員
 community.title=社群
 gettingStarted.bulletpoint1=選擇一個 <strong>資料庫</strong>從<a href="https://nexus.openlca.org">openLCA Nexus</a>並且導入openLCA.你也可以從一個空的資料庫開始並建立您自己的資料.
-gettingStarted.bulletpoint2=下載<strong>影響方式</strong>從 <a href="http://www.openlca.org/downloads">openLCA 網站</a>然後導入資料庫
+gettingStarted.bulletpoint2=下載<strong>影響評估方法</strong>從 <a href="http://www.openlca.org/downloads">openLCA 網站</a>然後導入資料庫
 gettingStarted.description=對於初次的使用者: 為了使用openLCA,您需要準備兩樣東西:
 gettingStarted.explanatoryVideo=如何導入一個資料庫和方法至openLCA顯示在這個 <a href="https://www.youtube.com/watch?v=FqVMbwhAEW4">影片中</a>
-gettingStarted.note=現在,您擁有了一切可以開始您的LCA學習了!
+gettingStarted.note=現在,您擁有了一切可以開始您的 LCA 學習了!
 gettingStarted.title=入門
 manuals.description=了解更多如何使用openLCA產品於我們的<a href="http://www.openlca.org/manuals">使用者說明中</a>這些說明了最基本的特性和功能以及在更進階的主題中提供全面性的資訊.您也可以參考我們的<a href="http://www.openlca.org/case_studies">案例研究</a>關於如何建立您的系統模型的靈感
 manuals.instructionalVideos=也請看我們的<a href="https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w">介紹影片中</a>解釋並說明具體的主題
 manuals.title=使用說明 & 案例研究
 subtext.first=專業且具公信力的生命週期評估和永續性評估軟體 
-subtext.second=開放原始碼: 由 Mozilla 公開許可2.0
+subtext.second=開放原始碼授權: 由 Mozilla 公開許可2.0
 subtext.third=於 2006 年由 GreenDelta, Berln 創建並開始維護
 subtitle=版本 1.5.0 (Windows 64位元)
 title=歡迎來到OpenLCA
