Added missing text entry in start page

--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -1,10 +1,10 @@
-community.becomeMember=Become a member of our LinkedIn group
+community.becomeMember=Become a member of our LinkedIn group!
 community.description=An increasing number of people are using openLCA. From universities to corporations to consultancies as well as institutions of every kind and size, from all over the world. Find out more about the openLCA network and its users <a href="http://www.openlca.org/network">here</a>.
 community.followUs=Follow us on Twitter!
 community.note=The source code of openLCA is hosted on <a href="https://github.com/GreenDelta">Github</a>.
 community.title=Community
 gettingStarted.bulletpoint1=Choose a <strong>database</strong> from <a href="https://nexus.openlca.org">openLCA Nexus</a> and import it into openLCA. You can also start with an empty database and create your own data sets.
-gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href="http://www.openlca.org/downloads">openLCA website</a> and import then into the database.
+gettingStarted.bulletpoint2=Download <strong>impact methods</strong> from the <a href="http://www.openlca.org/downloads">openLCA website</a> and import them into the database.
 gettingStarted.description=For first-time users: To use openLCA, you need to prepare two things:
 gettingStarted.explanatoryVideo=How to import a database and methods into openLCA is shown in this <a href="https://www.youtube.com/watch?v=FqVMbwhAEW4">video</a>.
 gettingStarted.note=Now you have everything to start your LCA study!
@@ -17,7 +17,7 @@ subtext.second=Open Source: Licenced under the Mozilla Public Licence 2.0.
 subtext.third=Created and maintained since 2006 by GreenDelta, Berlin
 subtitle=Version 1.5.0 (Windows 64bit)
 title=Welcome to openLCA!
-whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong>
+whatsNew.bulletpoint1=<strong>Regionalized impact assessment</strong> & improved <strong>Life Cycle Costing</strong>
 whatsNew.bulletpoint2=New and better <strong>structure of database elements</strong> including new icons
 whatsNew.bulletpoint3=Several <strong>smaller improvements and bug fixes</strong>
 whatsNew.description=For the 1.5 version, we restructured the software and implemented new features to make openLCA more user-friendly and even more powerful:
