updated translation files

--- a/olca-app-html/src/start_page/msg/messages_de.properties
+++ b/olca-app-html/src/start_page/msg/messages_de.properties
@@ -17,7 +17,7 @@ subtext.second=Open Source: Lizensiert unter der Mozilla Public Licence 2.0.
 subtext.third=Erstellt und weiterentwickelt von GreenDelta, Berlin
 subtitle=Version 1.5.0 (Windows 64bit)
 title=Willkommen zu openLCA!
-whatsNew.bulletpoint1=<strong>Regionalisierte Wirkungsabschätzung</strong> & verbesserte Lebenszykluskostenrechnung
+whatsNew.bulletpoint1=<strong>Regionalisierte Wirkungsabschätzung</strong> & verbesserte <strong>Lebenszykluskostenrechnung</strong>
 whatsNew.bulletpoint2=Neue und bessere <strong>Struktur der Datenbankelemente</strong> und neue Icons
 whatsNew.bulletpoint3=Mehrere <strong>kleinere Verbesserungen und Fehlerbehebungen</strong>
 whatsNew.description=Für Version 1.5 haben wir die Software restrukturiert und neue Funktionalitäten eingebaut um openLCA benutzerfreundlicher und noch leistungsfähiger zu machen:
