--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -452,8 +452,8 @@ NameCannotBeEmpty=Der Name darf nicht leer sein
 NameEmptyOrAlreadyExists=Der Name ist leer oder existiert bereits
 NameShouldBeDifferent=Der Name sollte anders sein
 NeedOpenDatabase=Bitte \u00f6ffnen Sie zuerst eine Datenbank
-Netcosts=Netto-Kosten
 NetCosts=Netto-Kosten
+Netcosts=Netto-Kosten
 Never=Niemals
 NewActor=Neuer Kontakt
 NewCategory=Neue Kategorie
@@ -740,7 +740,7 @@ UnitAlreadyExistsInUnitGroup=Einheit existiert bereits in Einheitengruppe {0}
 UnitGroup=Einheitengruppe
 UnitGroups=Einheitengruppen
 UnitIsUsed=Die angegebene Einheit wird in Prozessen, Wirkungsabsch\u00e4tzungsmethoden oder sozialen Indikatoren benutzt.
-UnitMappingPage_Description=Bitte w\u00e4hlen Sie die Flusseigenschaft, zu der eine Einheit w\u00e4hrend des Imports zugeordnet werden soll und teilen Sie ihr, falls nicht vorhanden, einen Konvertierungsfaktor zu.
+UnitMappingPage_Description=Bitte w\u00e4hlen Sie die Flusseigenschaft aus, zu der eine Einheit w\u00e4hrend des Imports zugeordnet werden soll und weisen Sie ihr, falls nicht vorhanden, einen Umrechnungsfaktor zu.
 UnitOfMeasurement=Einheit
 UnitProcess=Unit-Prozess
 Units=Einheiten
