--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -452,8 +452,8 @@ NameCannotBeEmpty=El nombre no puede estar vac\u00edo
 NameEmptyOrAlreadyExists=El nombre est\u00e1 vac\u00edo o ya existe
 NameShouldBeDifferent=El nombre debe ser diferente
 NeedOpenDatabase=Es necesario abrir una base de datos primero
-Netcosts=Costes netos
 NetCosts=Costes netos
+Netcosts=Costes netos
 Never=Nunca
 NewActor=Nuevo actor
 NewCategory=Nueva categor\u00eda
@@ -471,7 +471,7 @@ NewLCIAMethod=Nuevo m\u00e9todo de EICV
 NewLocation=Nueva ubicaci\u00f3n
 NewParameter=Nuevo par\u00e1metro
 NewProcess=Nuevo proceso
-NewProductSystem=Nuevo sistema de proceso
+NewProductSystem=Nuevo sistema de producto
 NewProject=Nuevo proyecto
 NewSection=Nueva secci\u00f3n
 NewSocialIndicator=Nuevo indicador social
