--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -1,4 +1,4 @@
-community.becomeMember=Become a member of our LinkedIn group!
+community.becomeMember=Become a member of our LinkedIn group
 community.description=An increasing number of people are using openLCA. From universities to corporations to consultancies as well as institutions of every kind and size, from all over the world. Find out more about the openLCA network and its users <a href="http://www.openlca.org/network">here</a>.
 community.followUs=Follow us on Twitter!
 community.note=The source code of openLCA is hosted on <a href="https://github.com/GreenDelta">Github</a>.
